Update to v1.4.4